--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
+    "kue": "^0.11.6",
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "node-sass-middleware": "^0.11.0",
+    "nodemailer": "^6.4.18",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^3.1.2"
   }
 }
